--- a/project 1/first.html
+++ b/project 1/first.html
@@ -1,15 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Ми знов все почали з початку.</h1>
-    <p>я все ще pekan</p>
 
+<!DOCTYPE html>
+    <html>
+    <head>
+        <title>Сімейні фото</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./css/style.css">
+    </head>
+<body>
+    <header>
+        <h1>Варя і пригоди</h1>
+    </header>
+    <main>
+        <div class="gallery">
+        <a href="#">
+            <img src="/Family fotos/Varya/Varvara_1.jpg" alt="Сімейне фото 1">
+        </a>
+        <a href="#">
+            <img src="/Family fotos/Varya/Varvara_2.jpg" alt="Сімейне фото 2">
+        </a>
+        <a href="#">
+            <img src="/Family fotos/Varya/Varvara_3.jpg" alt="Сімейне фото 3">
+        </a>
+        <a href="#">
+            <img src="/Family fotos/Varya/4.jpg" alt="Сімейне фото 4">
+        </a>
+        <a href="#">
+            <img src="/Family fotos/Varya/6.jpg" alt="Сімейне фото 6">
+        <a href="#">
+            <img src="/Family fotos/Varya/7.jpg" alt="Сімейне фото 4">
+        </a>
+        <a href="#">
+            <img src="/Family fotos/Varya/8.jpg" alt="Сімейне фото 5">
+        </a>
+        <a href="#">
+            <img src="/Family fotos/Varya/9.jpg" alt="Сімейне фото 6">
+        <a href="#">
+            <img src="/Family fotos/Varya/10.jpg" alt="Сімейне фото 5">
+        </a>
+        <a href="#">
+            <img src="/Family fotos/Varya/11.jpg" alt="Сімейне фото 6">
+        </a>
+    </div>
+    </main>
 </body>
 </html>
