almost finished the third block

--- a/index.html
+++ b/index.html
@@ -71,29 +71,31 @@
                             <h2 class="product__title bebas-neue">For whom?</h2>
                             <img class="product__img" src="img/Rectangle_2.png" alt="Robust pot"></img>
                         </div>
-                        <div class="product__col">
+                        <div class="product__col-first">
                             <h3 class="product__title-star"><span>*</span>Robust</h3>
-                            <h2 class="product__title"><span class="product__line-first"></span><span>1</span> For those who value durable things<span class="product__line-second"></span></h2>
+                            <h2 class="product__title"><span class="product__line-first"></span><span>1</span> For those
+                                who value durable things<span class="product__line-second"></span></h2>
                             <p class="product__text">Don’t worry if you happen to knock your POTR on the floor, unlike a
                                 traditional ceramic pot it will take the fall in its stride.</p>
                         </div>
                     </div>
                     <div class="product__block">
                         <div class="product__vertical-text"><span></span>potr pots</div>
-                        <div class="product__col">
-                            <!-- <h2 class="product__title bebas-neue">For whom?</h2> -->
+                        <div class="product__col-second">
                             <img class="product__img" src="img/Rectangle_3.png" alt="Robust pot"></img>
                             <h3 class="product__title-star"><span>*</span>Beautiful</h3>
                             <h2 class="product__title bebas-neue"><span>2</span>For those who love modern design</h2>
                             <p class="product__col-text">We strived to achieve something that would look beautiful in
                                 your home while being incredibly functional and intuitive to use.</p>
                         </div>
-                        <div class="product__col">
+                        <div class="product__col-third">
                             <img class="product__img" src="img/Rectangle_4.png" alt="Robust pot"></img>
                             <h3 class="product__title-star"><span>*</span>Saves time</h3>
-                            <h2 class="product__title bebas-neue"><span>3</span>For those who don't have enough time to regular water indoor plants</h2>
-                            <p class="product__col-text">Water is drawn up through the cotton by the plant using tried and tested wicking technology. It’s particularly useful
-                            if you aren’t able to water them yourself on a regular basis!</p>
+                            <h2 class="product__title bebas-neue"><span>3</span>For those who don't have enough time to
+                                regular water indoor plants</h2>
+                            <p class="product__col-text">Water is drawn up through the cotton by the plant using tried
+                                and tested wicking technology. It’s particularly useful
+                                if you aren’t able to water them yourself on a regular basis!</p>
                         </div>
                     </div>
                 </section>
