--- a/index.html
+++ b/index.html
@@ -71,39 +71,52 @@
                             <h2 class="product__title bebas-neue">For whom?</h2>
                             <img class="product__img" src="img/Rectangle_2.png" alt="Robust pot"></img>
                         </div>
+
                         <div class="product__col-first">
                             <h3 class="product__title-star"><span>*</span>Robust</h3>
-                            <h2 class="product__title"><span class="product__line-first"></span><span>1</span> For those
-                                who value durable things<span class="product__line-second"></span></h2>
+                            <h2 class="product__title"><span class="product__1-first"></span><span>1</span> For those
+                                who value durable things<span class="product__1-second"></span></h2>
                             <p class="product__text">Don’t worry if you happen to knock your POTR on the floor, unlike a
                                 traditional ceramic pot it will take the fall in its stride.</p>
                         </div>
                     </div>
+
                     <div class="product__block">
-                        <div class="product__vertical-text"><span></span>potr pots</div>
                         <div class="product__col-second">
+                            <div class="product__vertical-text-second"><span></span>potr pots</div>
                             <img class="product__img" src="img/Rectangle_3.png" alt="Robust pot"></img>
-                            <h3 class="product__title-star"><span>*</span>Beautiful</h3>
-                            <h2 class="product__title bebas-neue"><span>2</span>For those who love modern design</h2>
+                            <h3 class="product__title-star-second"><span>*</span>Beautiful</h3>
+                            <h2 class="product__title title-second bebas-neue"><span class="product__2-first"></span><span class="title__second">2</span>For
+                                those who love
+                                modern design<span class="product__2-second"></span></h2>
                             <p class="product__col-text">We strived to achieve something that would look beautiful in
                                 your home while being incredibly functional and intuitive to use.</p>
                         </div>
+
                         <div class="product__col-third">
-                            <img class="product__img" src="img/Rectangle_4.png" alt="Robust pot"></img>
-                            <h3 class="product__title-star"><span>*</span>Saves time</h3>
-                            <h2 class="product__title bebas-neue"><span>3</span>For those who don't have enough time to
-                                regular water indoor plants</h2>
-                            <p class="product__col-text">Water is drawn up through the cotton by the plant using tried
-                                and tested wicking technology. It’s particularly useful
-                                if you aren’t able to water them yourself on a regular basis!</p>
+                            <div class="product__col-header">
+                                <img class="product__img" src="img/Rectangle_4.png" alt="Robust pot"></img>
+                                <h3 class="product__title-star-second"><span>*</span>Saves time</h3>
+                            </div>
+                            <div class="product__text-info">
+                                <h2 class="product__title bebas-neue"><span class="product__3-first"></span><span class="title__third">3</span>For those who
+                                    don't have enough time to regular water indoor plants<span class="product__3-second"></span>
+                                </h2>
+                                <p class="product__col-text">Water is drawn up through the cotton by the plant using
+                                    tried
+                                    and tested wicking technology. It’s particularly useful
+                                    if you aren’t able to water them yourself on a regular basis!
+                                </p>
+                            </div>
                         </div>
+
                     </div>
                 </section>
             </div>
         </main>
 
         <footer class="footer">
-
+            <span></span>
         </footer>
 
     </div>
