--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <div class="product__vertical-text"><span></span>potr pots</div>
                         <div class="product__col">
                             <h2 class="product__title bebas-neue">For whom?</h2>
-                            <img class="product__img" src="img/Rectangle_2.png" alt="Robust pot"></img>
+                            <img class="product__img-1" src="img/Rectangle_2.png" alt="Robust pot"></img>
                         </div>
 
                         <div class="product__col-first">
@@ -84,7 +84,7 @@
                     <div class="product__block">
                         <div class="product__col-second">
                             <div class="product__vertical-text-second"><span></span>potr pots</div>
-                            <img class="product__img" src="img/Rectangle_3.png" alt="Robust pot"></img>
+                            <img class="product__img-2" src="img/Rectangle_3.png" alt="Robust pot"></img>
                             <h3 class="product__title-star-second"><span>*</span>Beautiful</h3>
                             <h2 class="product__title title-second bebas-neue"><span class="product__2-first"></span><span class="title__second">2</span>For
                                 those who love
@@ -95,7 +95,7 @@
 
                         <div class="product__col-third">
                             <div class="product__col-header">
-                                <img class="product__img" src="img/Rectangle_4.png" alt="Robust pot"></img>
+                                <img class="product__img-3" src="img/Rectangle_4.png" alt="Robust pot"></img>
                                 <h3 class="product__title-star-second"><span>*</span>Saves time</h3>
                             </div>
                             <div class="product__text-info">
@@ -110,6 +110,26 @@
                             </div>
                         </div>
 
+                    </div>
+                </section>
+                <section class="features">
+                    <h3 class="features__title">POTR Pots <span>Features</span></h3>
+                    <div class="features__content">
+                        <div class="features__block">
+                            <img class="features__block-img" src="img/_block-1.png" alt="">
+                            <h6 class="features__block-title">Flat pack postage</h6>
+                            <p class="features__block-text">The pots will be shipped flat packed so they can be slipped through your letter box</p>
+                        </div>
+                        <div class="features__block">
+                            <img class="features__block-img" src="img/_block-2.png" alt="">
+                            <h6 class="features__block-title">Flat pack postage</h6>
+                            <p class="features__block-text">The pots will be shipped flat packed so they can be slipped through your letter box</p>
+                        </div>
+                        <div class="features__block">
+                            <img class="features__block-img" src="img/_block-3.png" alt="">
+                            <h6 class="features__block-title">Flat pack postage</h6>
+                            <p class="features__block-text">The pots will be shipped flat packed so they can be slipped through your letter box</p>
+                        </div>
                     </div>
                 </section>
             </div>
