--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
                             <div class="product__vertical-text-second"><span></span>potr pots</div>
                             <img class="product__img-2" src="img/Rectangle_3.png" alt="Robust pot"></img>
                             <h3 class="product__title-star-second"><span>*</span>Beautiful</h3>
-                            <h2 class="product__title title-second bebas-neue"><span class="product__2-first"></span><span class="title__second">2</span>For
+                            <h2 class="product__title title-second bebas-neue"><span
+                                    class="product__2-first"></span><span class="title__second">2</span>For
                                 those who love
                                 modern design<span class="product__2-second"></span></h2>
                             <p class="product__col-text">We strived to achieve something that would look beautiful in
@@ -99,8 +100,10 @@
                                 <h3 class="product__title-star-second"><span>*</span>Saves time</h3>
                             </div>
                             <div class="product__text-info">
-                                <h2 class="product__title bebas-neue"><span class="product__3-first"></span><span class="title__third">3</span>For those who
-                                    don't have enough time to regular water indoor plants<span class="product__3-second"></span>
+                                <h2 class="product__title bebas-neue"><span class="product__3-first"></span><span
+                                        class="title__third">3</span>For those who
+                                    don't have enough time to regular water indoor plants<span
+                                        class="product__3-second"></span>
                                 </h2>
                                 <p class="product__col-text">Water is drawn up through the cotton by the plant using
                                     tried
@@ -112,26 +115,60 @@
 
                     </div>
                 </section>
+
+                <!-- /* block 3 img */ -->
                 <section class="features">
                     <h3 class="features__title">POTR Pots <span>Features</span></h3>
                     <div class="features__content">
                         <div class="features__block">
-                            <img class="features__block-img" src="img/_block-1.png" alt="">
+                            <img class="features__block-img" src="img/_block-1.png" alt="розібраний вазон">
                             <h6 class="features__block-title">Flat pack postage</h6>
-                            <p class="features__block-text">The pots will be shipped flat packed so they can be slipped through your letter box</p>
+                            <p class="features__block-text">The pots will be shipped flat packed so they can be slipped
+                                through your letter box</p>
                         </div>
                         <div class="features__block">
-                            <img class="features__block-img" src="img/_block-2.png" alt="">
+                            <img class="features__block-img" src="img/_block-2.png" alt="розібраний вазон">
                             <h6 class="features__block-title">Flat pack postage</h6>
-                            <p class="features__block-text">The pots will be shipped flat packed so they can be slipped through your letter box</p>
+                            <p class="features__block-text">The pots will be shipped flat packed so they can be slipped
+                                through your letter box</p>
                         </div>
                         <div class="features__block">
-                            <img class="features__block-img" src="img/_block-3.png" alt="">
+                            <img class="features__block-img" src="img/_block-3.png" alt="flowerpot with self-watering">
                             <h6 class="features__block-title">Flat pack postage</h6>
-                            <p class="features__block-text">The pots will be shipped flat packed so they can be slipped through your letter box</p>
+                            <p class="features__block-text">The pots will be shipped flat packed so they can be slipped
+                                through your letter box</p>
                         </div>
                     </div>
                 </section>
+                <!-- /* //block 3 img */ -->
+
+                <!-- * team! */ -->
+                <section class="team">
+                    <h4 class="team__title">Meet the POTR team!</h4>
+                    <div class="team__content">
+                        <div class="team__block">
+                            <div class="team__text">
+                                <p>
+                                    Andy and Martin are experienced product designers with a love of plants and the
+                                    environment. They have over ten years
+                                    combined industry experience in bringing products to market at some of the worlds
+                                    largest consumer product companies.
+                                </p>
+                                <p>
+                                    Having studied Product Design Engineering together at the Glasgow School of Art,
+                                    they
+                                    have a long history of working
+                                    as a team on a variety of design projects.
+                                </p>
+                            </div>
+                            <img class="team__img" src="img/_team-1.png" alt="Meet the POTR team">
+                        </div>
+                        <img class="team__rectangle" src="img/Rectangle_team-2.png" alt="Rectangle yellow">
+                        <p class="team__upper-absolute-title">Martin</p>
+                        <p class="team__lowercase-absolute-title">Andy</p>
+                    </div>
+                </section>
+                <!-- /* team! */ -->
             </div>
         </main>
 
