--- a/index.html
+++ b/index.html
@@ -121,19 +121,19 @@
                     <h3 class="features__title">POTR Pots <span>Features</span></h3>
                     <div class="features__content">
                         <div class="features__block">
-                            <img class="features__block-img" src="img/_block-1.png" alt="розібраний вазон">
+                            <img class="features__block-img" src="img/block-1.png" alt="розібраний вазон">
                             <h6 class="features__block-title">Flat pack postage</h6>
                             <p class="features__block-text">The pots will be shipped flat packed so they can be slipped
                                 through your letter box</p>
                         </div>
                         <div class="features__block">
-                            <img class="features__block-img" src="img/_block-2.png" alt="розібраний вазон">
+                            <img class="features__block-img" src="img/block-2.png" alt="розібраний вазон">
                             <h6 class="features__block-title">Flat pack postage</h6>
                             <p class="features__block-text">The pots will be shipped flat packed so they can be slipped
                                 through your letter box</p>
                         </div>
                         <div class="features__block">
-                            <img class="features__block-img" src="img/_block-3.png" alt="flowerpot with self-watering">
+                            <img class="features__block-img" src="img/block-3.png" alt="flowerpot with self-watering">
                             <h6 class="features__block-title">Flat pack postage</h6>
                             <p class="features__block-text">The pots will be shipped flat packed so they can be slipped
                                 through your letter box</p>
@@ -161,7 +161,7 @@
                                     as a team on a variety of design projects.
                                 </p>
                             </div>
-                            <img class="team__img" src="img/_team-1.png" alt="Meet the POTR team">
+                            <img class="team__img" src="img/team-1.png" alt="Meet the POTR team">
                         </div>
                         <img class="team__rectangle" src="img/Rectangle_team-2.png" alt="Rectangle yellow">
                         <p class="team__upper-absolute-title">Martin</p>
@@ -173,7 +173,7 @@
         </main>
 
         <footer class="footer">
-            <span></span>
+
         </footer>
 
     </div>
