--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <body>
 
     <div class="wrapper">
+
+        <!-- /* header = вид всього першого екрану */ -->
         <header class="header">
             <div class="top-img-absolute">
                 <img src="img/Rectangle_yellow-rectangle.png" alt="yellow-rectangle"></img>
@@ -61,9 +63,12 @@
                 </section>
             </div>
         </header>
+        <!-- /* header = вид всього першого екрану */ -->
 
         <main class="main">
             <div class="container">
+
+                <!-- /* products */ -->
                 <section class="products">
                     <div class="product__block">
                         <div class="product__vertical-text"><span></span>potr pots</div>
@@ -115,6 +120,7 @@
 
                     </div>
                 </section>
+                <!-- /* products */ -->
 
                 <!-- /* block 3 img */ -->
                 <section class="features">
@@ -142,7 +148,7 @@
                 </section>
                 <!-- /* //block 3 img */ -->
 
-                <!-- * team! */ -->
+                <!-- /* team! */ -->
                 <section class="team">
                     <h4 class="team__title">Meet the POTR team!</h4>
                     <div class="team__content">
@@ -165,11 +171,34 @@
                         </div>
                         <img class="team__rectangle" src="img/Rectangle_team-2.png" alt="Rectangle yellow">
                         <p class="team__upper-absolute-title">Martin</p>
-                        <p class="team__lowercase-absolute-title">Andy</p>
+                        <p class="team__lowercase-absolute-title">And<span>y</span></p>
                     </div>
                 </section>
                 <!-- /* team! */ -->
             </div>
+
+            <!-- /* Materials and Features */ -->
+            <section class="special">
+                <div class="special__block">
+                    <h2 class="special__main-title">Materials and Features</h2>
+                    <img src="img/Features-1.png" alt="Features">
+                    <div class="special__block-info">
+                        <h6 class="special__title">Environmentally friendly</h6>
+                        <p class="special__text">
+                            All materials used in our pots are made from 100% recycled materials and are 100% recyclable
+                            at the end of life (should
+                            you ever choose to get rid of your POTR!). All materials have been sourced from within
+                            Europe to reduce our carbon
+                            footprint when transporting the raw materials, and all manufacturing is carried out in the
+                            UK.
+                        </p>
+                    </div>
+                    <span class="special__plus"></span>
+                </div>
+            </section>
+            <!-- /* Materials and Features */ -->
+
+
         </main>
 
         <footer class="footer">
