Додав якийсь блок

--- a/index.html
+++ b/index.html
@@ -202,7 +202,28 @@
         </main>
 
         <footer class="footer">
-
+            <div class="container">
+                <section class="info">
+                    <div class="info__adress">
+                        <h6 class="info__title">Adrress</h6>
+                        <a href="https://goo.gl/maps/E6fWV2NXjPdt9B3p9" target="_blank">
+                            United Kingdom 99 Staple Hill Road, Bristol, BS16 5AD
+                        </a>
+                    </div>
+                    <div class="info__block">
+                        <ul class="info__social-networks">
+                            <li><a href="img/SVG/tvit.png" aria-multiline="twitter"></a></li>
+                            <li><a href="img/SVG/instagram.png" aria-multiline="instagram"></a></li>
+                            <li><a href="img/SVG/facebook.png" aria-multiline="facebook"></a></li>
+                        </ul>
+                        <a href="#" class="info__logo">potrpots</a>
+                    </div>
+                    <div class="info__our-rights">
+                        <h6 class="info__title">aBOUT uS</h6>
+                        <p class="info__copy">Copyright © 2019</p>
+                    </div>
+                </section>
+            </div>
         </footer>
 
     </div>
