--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
 
             <div class="container">
-                <div class="navbar">
+                <section class="navbar">
                     <div class="navbar__content">
                         <a href="#" class="navbar__logo bebas-neue">POTR POTS</a>
                         <ul class="navbar__list">
@@ -37,7 +37,7 @@
                             <a href="#"><img src="img/SVG/navbar_cart.png" alt="cart"></a>
                         </div>
                     </div>
-                </div>
+                </section>
 
                 <section class="top__info">
                     <div class="top__block">
@@ -212,9 +212,9 @@
                     </div>
                     <div class="info__block">
                         <ul class="info__social-networks">
-                            <li><a href="img/SVG/tvit.png" aria-multiline="twitter"></a></li>
-                            <li><a href="img/SVG/instagram.png" aria-multiline="instagram"></a></li>
-                            <li><a href="img/SVG/facebook.png" aria-multiline="facebook"></a></li>
+                            <li><a href="#"><img src="img/SVG/tvit.png" alt="twitter"></a></li>
+                            <li><a href="#"><img src="img/SVG/instagram.png" alt="instagram"></a></li>
+                            <li><a href="#"><img src="img/SVG/VectorFC.svg" alt="facebook"></a></li>
                         </ul>
                         <a href="#" class="info__logo">potrpots</a>
                     </div>
