add function click

--- a/index.html
+++ b/index.html
@@ -83,10 +83,15 @@
 
                         <div class="product__col-first">
                             <h3 class="product__title-star"><span>*</span>Robust</h3>
-                            <h2 class="product__title"><span class="product__1-first"></span><span>1</span> For those
-                                who value durable things<span class="product__1-second"></span></h2>
+                            <h2 class="product__title">
+                                <span class="product__1-first"></span>
+                                <span>1</span>
+                                For those who value durable things
+                                <span class="product__1-second"></span>
+                            </h2>
                             <p class="product__text">Don’t worry if you happen to knock your POTR on the floor, unlike a
-                                traditional ceramic pot it will take the fall in its stride.</p>
+                                traditional ceramic pot it will take the fall in its stride.
+                            </p>
                         </div>
                     </div>
 
@@ -198,35 +203,38 @@
                             UK.
                         </p>
                     </div>
-                    <p class="special__wrapper">
-                        <span class="special__plus-1">+</span>
-                        <span class="special__plus-2">+</span>
-                        <span class="special__plus-3">+</span>
-                        <span class="special__plus-4">+</span>
-                        <span class="special__plus-5">+</span>
-                    </p>
+                    <div class="special__wrapper-span">
+                        <span id="plus-1" class="special__plus-1">+</span>
+                        <span id="plus-2" class="special__plus-2">+</span>
+                        <span id="plus-3" class="special__plus-3">+</span>
+                        <span id="plus-4" class="special__plus-4">+</span>
+                        <span id="plus-5" class="special__plus-5">+</span>
+                    </div>
 
-                    <div class="special__block-1" id="block-1">
-                        <p>POTR Pots are constructed using recycled polypropylene which can be fully recycled.</p>
-                    </div>
-                    <div class="special__block-2" id="block-2">
-                        <p>POTR pots are flat pack, origami planters designed to self-water your plants, made from
-                            recycled materials.</p>
-                    </div>
-                    <div class="special__block-3" id="block-3">
-                        <p>Once assembled the cotton cord doubles as the watering system, allowing your plants to
-                            self-regulate their water intake
-                            using tried and tested wicking technology.</p>
-                    </div>
-                    <div class="special__block-4" id="block-4">
-                        <p>Shipped flat packed so they can be slipped through your letterbox, POTR Pots have the
-                            smallest carbon footprint possible
-                            during transit.</p>
-                    </div>
-                    <div class="special__block-5" id="block-5">
-                        <p>We have chosen Bobbiny recycled cotton cord to use as our draw string and wicking cord. Not
-                            only is it 100% recycled, it
-                            looks great and works really well at wicking water.</p>
+                    <div class="special__wrapper-block">
+                        <div class="special__block-1" id="block-1">
+                            <p>POTR Pots are constructed using recycled polypropylene which can be fully recycled.</p>
+                        </div>
+                        <div class="special__block-2" id="block-2">
+                            <p>POTR pots are flat pack, origami planters designed to self-water your plants, made from
+                                recycled materials.</p>
+                        </div>
+                        <div class="special__block-3" id="block-3">
+                            <p>Once assembled the cotton cord doubles as the watering system, allowing your plants to
+                                self-regulate their water intake
+                                using tried and tested wicking technology.</p>
+                        </div>
+                        <div class="special__block-4" id="block-4">
+                            <p>Shipped flat packed so they can be slipped through your letterbox, POTR Pots have the
+                                smallest carbon footprint possible
+                                during transit.</p>
+                        </div>
+                        <div class="special__block-5" id="block-5">
+                            <p>We have chosen Bobbiny recycled cotton cord to use as our draw string and wicking cord.
+                                Not
+                                only is it 100% recycled, it
+                                looks great and works really well at wicking water.</p>
+                        </div>
                     </div>
                 </div>
             </section>
